ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aaa-service
            port:
              number: 8081
      - path: /k2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: bbb-service
            port:
              number: 8082
      - path: /k3(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ddd-service
            port:
              number: 8084
      - path: /k4(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: eee-service
            port:
              number: 8085
